l31 cart prepairing + added new btn cart to course page + added new route /cart with post and get methods + added empty cart model + added empty cart page + added cart to navbar + some align corrections in course card css

--- a/public/index.css
+++ b/public/index.css
@@ -25,3 +25,10 @@
 .course .price.big{
     font-size: 2.5rem;
 }
+
+.card-action.cart-align{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
